Mon Apr 24 20:11:45 2006  Tim Janik  <timj@gtk.org>

	* web/oldnews.doxi:
	* web/news.doxi: rotate, announce LAD conference 2006 visit.

	* web/Makefile.am (ACCOUNT): fix for timj to update the website from 
	multiple accounts.

Thu Apr 20 20:50:35 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkassortment.c: added extra guards to ensure that 
	assortment free() functions do not cause self->selected to point to 
	invalid/freed entries.

Thu Apr 20 01:23:17 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Fix printf format warnings.

Wed Apr 19 23:49:36 2006  Tim Janik  <timj@gtk.org>

	* configure.in: fixed inverted WITH_PERLRULE check.

	* beast-gtk/gxk/Makefile.am: fixed up clean rules so stamp files
	are properly deleted and dependent files are properly built.

Wed Apr 19 02:30:34 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: added specialized "distcheck" rule that disables a 
	recursive make dist. the reason for which is explained here:
	http://blogs.gnome.org/view/timj/2006/04/18/0

	* docs/beast.1.doxi:
	* beast-gtk/bstmain.c: implemented --merge.

	* configure.in: provide AM conditional WITH_PERLRULE.

	* beast-gtk/icons/Makefile.am:
	* configure.in: removed STRIP_* cruft. 

Tue Apr 18 21:25:00 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/bstmain.c: Fix double initialization of the application
	name (which causes glib to print a warning, which renders
	--g-fatal-warnings useless for debugging).
	Removed obsolete g_set_prgname (birnet_init is responsible for that).

Sun Apr 16 20:33:57 2006  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-merp-pad.bse: added new pad string.

Sun Apr 16 18:35:12 2006  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-moog-saw-bass.bse: added new bass instrument
	from Stefan Westerfeld.

Sun Apr 16 18:31:05 2006  Tim Janik  <timj@gtk.org>

	* library/instruments/Makefile.am: 
	* library/instruments/bqs-fretless-bass.bse: CVS renamed "base" to "bass".
